change courses fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="channel_name">Movie Alarm Channel</string>
     <string name="channel_description">This notification will show the film which you picked</string>
     <string name="news_title">Новини</string>
+    <string name="courses_title">Курси</string>
 </resources>
