--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">BaseStartApplication</string>
     <string name="error_message">Some error occurred</string>
     <string name="release_date">Release date:</string>
-    <string name="remind">Remind</string>
+    <string name="register_course">Вчитись</string>
     <string name="movie_picker">Movie Picker</string>
     <string name="movie_notification_description">It`s time to watch this film!</string>
     <string name="channel_name">Movie Alarm Channel</string>
