--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="channel_description">This notification will show the film which you picked</string>
     <string name="news_title">Новини</string>
     <string name="courses_title">Курси</string>
+    <string name="account">Аккаунт</string>
 </resources>
