add lesson layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="enterEmail">Email address</string>
     <string name="enterPassword">Password</string>
     <string name="loginButtonText">Увійти</string>
+    <string name="comments">Коментарі</string>
 </resources>
