--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="enterPassword">Password</string>
     <string name="loginButtonText">Увійти</string>
     <string name="comments">Коментарі</string>
+    <string name="lessonDetailsTitle">Урок</string>
 </resources>
